<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/edite"
        android:layout_width="58dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginEnd="72dp"
        android:gravity="center"
        android:hint="@string/PROFILE"
        android:text="PROFILE"
        android:textColor="#03A9F4"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edite" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="392dp"
        android:layout_height="433dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/ET_Name"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ET_Email"
            android:layout_width="421dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ET_Birthdate"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:hint="@string/BittheDate"
            android:inputType="date"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Et_country"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/Country"
            android:inputType="textPersonName"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="392dp"
        android:layout_height="433dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/tv_Name"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tv_Email"
            android:layout_width="421dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tv_Birthdate"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:hint="@string/BittheDate"
            android:inputType="date"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tv_country"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:ems="10"
            android:hint="@string/Country"
            android:inputType="textPersonName"
            android:textColor="#9C27B0"
            android:textColorHint="#9C27B0"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/check_geender"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/point"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rab1_Male"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/Male"
                android:text="Male"
                android:textColor="#9C27B0"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/red1_Female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/Female"
                android:text="Female"
                android:textColor="#9C27B0"
                android:textSize="24sp" />
        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8BC34A"
        android:text="Save"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="424dp"
        android:layout_height="139dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>